@@ -29,6 +29,8 @@ vm-builder (0.9-0ubuntu3) UNRELEASED; urgency=low
   * Match ec2 vocabulary by adding option name and clarifying help 
     (LP: #284765, LP: #285170, LP: #285165)
   * Added a check for xen hypervisor when ec2 is selected (LP: #285191)
+  * Added checks for presence of bucket, access key and secret key for ec2 
+    (LP: #284757)
 
   [Mathias Gug]
   * Fix --templates option.
